# paste

./: Cargo.toml
src/: lib.rs
tests/: test_attr.rs  test_doc.rs  test_expr.rs  test_item.rs
