[package]
name = "unique-paste"
version = "0.1.0"
categories = ["development-tools"]
description = "A modified version of Paste, with a unique_paste! macro."
edition = "2018"
keywords = ["macros"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tommy-ASD/unique-paste"
rust-version = "1.31"

[lib]
proc-macro = true

[dev-dependencies]
paste-test-suite = { version = "0", path = "tests/macros" }
rustversion = "1.0"
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
once_cell = "1.18.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
